--- a/templates/indexThree.html
+++ b/templates/indexThree.html
@@ -4,22 +4,23 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Django3D || View.Js TestBench || Three.Js</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
      {% load staticfiles %}
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
      <script src="{% static 'js/three.js' %}" defer></script>
      <script src="{% static 'js/main.js' %}" defer></script>
 {#    <script src="js/three.js" defer></script>#}
 {#    <script src="js/main.js" defer></script>#}
-    <title>my Three.Js website</title>
 </head>
 
 <body>
     <header>
         <div class="container">
             <div id="branding">
-                <h1>Django </h1>
+                <h1>Django3D || View.Js TestBench || Three.Js </h1>
                 <div id="border"></div>
             </div>
             <nav>
