--- a/templates/indexThree.html
+++ b/templates/indexThree.html
@@ -7,31 +7,28 @@
     <title>Django3D || View.Js TestBench || Three.Js</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-     {% load staticfiles %}
+    {% load staticfiles %}
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    {% comment %} <script src="{% static 'js/three.js' %}" defer></script>  {% endcomment %}
+    {% comment %} <script src="{% static 'js/main.js' %}" defer></script> {% endcomment %}
 
-     <script src="{% static 'js/three.js' %}" defer></script>
-     <script src="{% static 'js/main.js' %}" defer></script>
-{#    <script src="js/three.js" defer></script>#}
-{#    <script src="js/main.js" defer></script>#}
+    <script src = "https://cdn.babylonjs.com/babylon.max.js"></script>
+    <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
+    <script src="{% static 'js/mainBabylon.js' %}" defer></script>
+
 </head>
 
 <body>
+<canvas id="renderCanvas" touch-action="none"></canvas>
     <header>
         <div class="container">
             <div id="branding">
-                <h1>Django3D || View.Js TestBench || Three.Js </h1>
+                <h1> Django || Babylon  </h1>
                 <div id="border"></div>
             </div>
-            <nav>
-{#                <ul>#}
-{#                    <li></li><a heref="index.html">Portfolio</a></li>#}
-{#                    <li><a heref="about.html">About</a></li>#}
-{#                </ul>#}
-            </nav>
         </div>
     </header>
 
 </body>
-
 </html>
