--- a/templates/indexThree.html
+++ b/templates/indexThree.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Django3D || View.Js TestBench || Three.Js</title>
 
@@ -12,23 +12,32 @@
     {% comment %} <script src="{% static 'js/three.js' %}" defer></script>  {% endcomment %}
     {% comment %} <script src="{% static 'js/main.js' %}" defer></script> {% endcomment %}
 
-    <script src = "https://cdn.babylonjs.com/babylon.max.js"></script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet'/>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <script src="https://cdn.babylonjs.com/babylon.max.js"></script>
     <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
+
+        <script src="{% static 'js/map.js' %}" defer></script>
     <script src="{% static 'js/mainBabylon.js' %}" defer></script>
 
-</head>
-
 <body>
-<canvas id="renderCanvas" touch-action="none"></canvas>
-    <header>
-        <div class="container">
-            <div id="branding">
-                <h1> Django || Babylon  </h1>
-                <div id="border"></div>
-            </div>
+<header>
+    <div class="container">
+        <div id="branding">
+            <h1> Django || Babylon </h1>
+            <div id="border"></div>
         </div>
-    </header>
+    </div>
+</header>
+<canvas id="renderCanvas" touch-action="none"></canvas>
 
+{#Map#}
+<div id='map' style='width: 300px; height: 200px;'>
+</div>
+<button type="button">Texture tha Pentagon</button>
+</head>
 </body>
 </html>
